<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.offerme.client.SendEmailActivity" >

    <item
        android:id="@+id/action_send_mail"
        android:icon="@drawable/abc_ic_menu_moreoverflow_normal_holo_light"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_send_email_contact"
                android:orderInCategory="100"
                android:title="@string/action_contact_us"
                app:showAsAction="ifRoom">
            </item>
            <item
                android:id="@+id/action_send_email_logout"
                android:orderInCategory="100"
                android:title="@string/action_logout"
                app:showAsAction="ifRoom">
            </item>
        </menu>
    </item>

</menu>
