<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#FFFFFF" >

        <RelativeLayout
            android:id="@+id/personal_cv_worklist_entreprise_layout"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="25dp" >

                <TextView
                    android:id="@+id/personal_cv_worklist_entreprise"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/personal_cv_worklist_date"
                    android:gravity="center_vertical"
                    android:hint="@string/personal_cv_workplace"
                    android:textColor="#000000"
                    android:textColorHint="#d3d3d3"
                    android:textSize="20sp" />

                <TextView
                    android:id="@id/personal_cv_worklist_date"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:hint="@string/personal_cv_worktime"
                    android:textColor="#808080"
                    android:textColorHint="#d3d3d3"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/personal_cv_worklist_post"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_vertical"
                    android:hint="@string/personal_cv_workpost"
                    android:textColor="#808080"
                    android:textColorHint="#d3d3d3"
                    android:textSize="16sp" />

            </RelativeLayout>

            <FrameLayout
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true" >

                <ImageView
                    android:id="@+id/imageview"
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/datailarrow" />
            </FrameLayout>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>