<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f6f6f6"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/personal_cv_workexpirence"
        android:textColor="#808080"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bordersearch" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:paddingLeft="10dp" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/personal_cv_workplace"
                        android:textColor="#808080"
                        android:textSize="16sp"
                        android:typeface="normal" />

                    <EditText
                        android:id="@+id/personal_cv_input_entreprise"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="right|center_vertical"
                        android:hint="@string/personal_cv_workinfo_hint"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/personal_cv_input_post"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="#808080"
                        android:textColorHint="#d3d3d3"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:paddingLeft="10dp" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/personal_cv_workpost"
                        android:textColor="#808080"
                        android:textSize="16sp"
                        android:typeface="normal" />

                    <EditText
                        android:id="@id/personal_cv_input_post"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="right|center_vertical"
                        android:hint="@string/personal_cv_workinfo_hint"
                        android:paddingRight="10dp"
                        android:singleLine="true"
                        android:textColor="#808080"
                        android:textColorHint="#d3d3d3"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="5dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/personal_cv_worktime"
                        android:textColor="#808080"
                        android:textSize="16sp" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent" >

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_toLeftOf="@+id/personal_cv_input_annee" >

                            <TextView
                                android:id="@+id/personal_cv_input_date_start"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:layout_toLeftOf="@+id/personal_cv_input_date_seperate"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:textColor="#808080"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@id/personal_cv_input_date_seperate"
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:layout_marginRight="5dp"
                                android:gravity="center_vertical"
                                android:text="~"
                                android:textColor="#808080"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/personal_cv_input_date_end"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:layout_toRightOf="@id/personal_cv_input_date_seperate"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:hint="@string/personal_cv_workinfo_date_hint"
                                android:textColor="#808080"
                                android:textColorHint="#d3d3d3"
                                android:textSize="16sp" />
                        </RelativeLayout>

                        <TextView
                            android:id="@id/personal_cv_input_annee"
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_alignParentRight="true"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/personal_cv_year"
                            android:textColor="#808080"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/personal_cv_input_delete"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/delete_experience" />

</LinearLayout>